// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentProfile view renders correctly -> student's view 1`] = `
<ScrollViewMock
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "marginTop": 20,
        "paddingLeft": 26,
        "paddingRight": 26,
      }
    }
  >
    <ContactPopup
      onPress={[Function]}
      visible={false}
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "maxHeight": 60,
        }
      }
    >
      <UserWithPic
        extra={
          <View
            style={
              Object {
                "alignItems": "flex-start",
              }
            }
          >
            <Text>
               
              שיעורים
            </Text>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "rgb(12,116,244)",
                  }
                }
              >
                ערוך פרטים
              </Text>
            </TouchableOpacity>
          </View>
        }
        height={54}
        user={
          Object {
            "balance": 900,
            "my_teacher": Object {
              "user": Object {
                "id": 2,
                "name": "teacher",
              },
            },
            "name": "test",
            "student_id": 1,
          }
        }
        width={54}
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginLeft": "auto",
            "marginTop": -6,
          }
        }
      >
        <Text>
          המורה שלי:
        </Text>
        <FastImage
          resizeMode="cover"
          source={
            Object {
              "uri": "https://res.cloudinary.com/hsmkon3br/image/upload/c_thumb,g_face,h_80,w_80/v1554188012/678099-profile-filled-256.png",
            }
          }
          style={
            Object {
              "borderRadius": 12,
              "height": 24,
              "marginLeft": 12,
              "marginTop": -2,
              "width": 24,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginTop": 24,
        }
      }
    />
    <View
      style={
        Object {
          "marginTop": 20,
        }
      }
    />
    <ShadowRect
      style={Object {}}
    >
      <SimpleLoader />
    </ShadowRect>
  </View>
</ScrollViewMock>
`;

exports[`StudentProfile view renders correctly -> teacher's view 1`] = `
<ScrollViewMock
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "marginTop": 20,
        "paddingLeft": 26,
        "paddingRight": 26,
      }
    }
  >
    <ContactPopup
      onPress={[Function]}
      visible={false}
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "maxHeight": 60,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <Themed.Icon
          name="arrow-forward"
          type="material"
        />
      </TouchableOpacity>
      <UserWithPic
        extra={
          <View
            style={
              Object {
                "alignItems": "flex-start",
              }
            }
          >
            <Text>
               
              שיעורים
            </Text>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "rgb(12,116,244)",
                  }
                }
              >
                ערוך פרטים
              </Text>
            </TouchableOpacity>
          </View>
        }
        height={54}
        user={
          Object {
            "balance": 900,
            "my_teacher": Object {
              "user": Object {
                "id": 2,
                "name": "teacher",
              },
            },
            "name": "test",
            "student_id": 1,
          }
        }
        width={54}
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginLeft": "auto",
            "marginTop": -6,
          }
        }
      >
        <Text>
          המורה שלי:
        </Text>
        <FastImage
          resizeMode="cover"
          source={
            Object {
              "uri": "https://res.cloudinary.com/hsmkon3br/image/upload/c_thumb,g_face,h_80,w_80/v1554188012/678099-profile-filled-256.png",
            }
          }
          style={
            Object {
              "borderRadius": 12,
              "height": 24,
              "marginLeft": 12,
              "marginTop": -2,
              "width": 24,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginTop": 24,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "padding": 12,
          }
        }
      >
        <Themed.Icon
          name="phone"
          size={24}
          type="feather"
        />
        <Text
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          צור קשר
        </Text>
      </TouchableOpacity>
    </View>
    <ShadowRect
      style={
        Object {
          "marginTop": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgb(121, 121, 121)",
            "fontWeight": "bold",
          }
        }
        testID="schedule"
      >
        שיעור הבא
      </Text>
      <StudentNextLessonView
        lesson={
          Object {
            "duration": 40,
            "id": 1,
          }
        }
        lessonPress={[Function]}
        loading={false}
        testID="lessonRowTouchable"
      />
      <LessonPopup
        item={
          Object {
            "duration": 40,
            "id": 1,
          }
        }
        navigation={
          Object {
            "addListener": [Function],
            "getParam": [Function],
            "navigate": [MockFunction],
          }
        }
        onPress={[Function]}
        testID="lessonPopup"
        visible={false}
      />
    </ShadowRect>
    <ShadowRect
      style={Object {}}
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgb(121, 121, 121)",
              "fontWeight": "bold",
            }
          }
        >
          מאזן כספי
        </Text>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "marginRight": "auto",
            }
          }
        >
          <Themed.Icon
            name="arrow-back"
            size={20}
            type="material"
          />
        </View>
      </TouchableOpacity>
      <StudentPayment
        dispatch={
          [MockFunction] {
            "calls": Array [
              Array [
                [Function],
              ],
              Array [
                [Function],
              ],
              Array [
                [Function],
              ],
              Array [
                [Function],
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": null,
              },
              Object {
                "type": "return",
                "value": null,
              },
              Object {
                "type": "return",
                "value": null,
              },
              Object {
                "type": "return",
                "value": null,
              },
            ],
          }
        }
        loading={false}
        payments={
          Array [
            Object {
              "amount": 100,
              "details": "test",
              "id": 1,
              "pdf_link": "http://test.com",
            },
            Object {
              "amount": 100,
              "details": "test",
              "id": 1,
            },
          ]
        }
        sum={900}
        user={
          Object {
            "name": "teacher",
            "teacher_id": 1,
          }
        }
      />
    </ShadowRect>
    <ShadowRect
      style={Object {}}
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgb(121, 121, 121)",
              "fontWeight": "bold",
            }
          }
          testID="monthlyAmount"
        >
          נושאים
        </Text>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "marginLeft": "auto",
            }
          }
        >
          <Themed.Icon
            name="arrow-back"
            size={20}
            type="material"
          />
        </View>
      </TouchableOpacity>
      <TopicsList
        topics={
          Array [
            Object {
              "id": 1,
              "title": "test1",
            },
            Object {
              "id": 2,
              "title": "test2",
            },
            Object {
              "id": 3,
              "title": "test3",
            },
          ]
        }
      />
    </ShadowRect>
  </View>
</ScrollViewMock>
`;
